[package]
name = "qhttp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["rt","rt-multi-thread","io-util","net","time","macros","sync","signal","fs"] }
async-trait = "^0.1"
log = "^0.4"
generic-pool = "^1"
http = "^0.2"
hpack = "0.3"
bitflags = "1.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
chrono = "^0.4"
mime_guess = "2"

tokio-rustls = { version = "^0.22", optional = true }
serde = { version = "^1", optional = true, features = ["derive"]}
serde_json = { version = "^1", optional = true }

[features]
default = ["all"]
rustls = ["tokio-rustls"]
json = ["serde", "serde_json"]
all = ["rustls", "json"]
